Bug 1400831 - Use a shorter tab-drop-indicator image to fit both default and compact themes, and move its box-align to CSS. r=dao
* Fix shadow overlap and re-optimize w. pngcrush and optipng w. -strip all to remove metadata

MozReview-Commit-ID: GJJfYMUz34q

UltraBlame original commit: e1a3a89200b725a0ddd52f5f7956b2d9a9f8c523

--- a/browser/base/content/tabbrowser.css
+++ b/browser/base/content/tabbrowser.css
@@ -573,6 +573,25 @@ tab
 drop
 -
 indicator
+-
+box
+{
+-
+moz
+-
+box
+-
+align
+:
+end
+;
+}
+.
+tab
+-
+drop
+-
+indicator
 {
 position
 :
