--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -5021,6 +5021,25 @@ tab
 drop
 -
 indicator
+-
+box
+{
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
+.
+tab
+-
+drop
+-
+indicator
 {
 list
 -
